force-app/main/default/objects/Strategic_Customer_Program__c/fields/Beta_Willingness__c.field-meta.xml
<CustomField>
    <fullName>Beta_Willingness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beta Willingness</label>
    <type>Checkbox</type>
</CustomField>