force-app/main/default/objects/Strategic_Customer_Program__c/fields/Business_Review__c.field-meta.xml
<CustomField>
    <fullName>Business_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Review</label>
    <type>Checkbox</type>
</CustomField>