force-app/main/default/objects/Strategic_Customer_Program__c/fields/Frequency_Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Special_Instructions__c</fullName>
    <label>Frequency Special Instructions</label>
    <type>TextArea</type>
</CustomField>