force-app/main/default/objects/Strategic_Customer_Program__c/fields/Intapp_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Objectives__c</fullName>
    <label>Intapp Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>