force-app/main/default/objects/Strategic_Customer_Program__c/fields/Next_Product_Discount_Notes__c.field-meta.xml
<CustomField>
    <fullName>Next_Product_Discount_Notes__c</fullName>
    <label>Next Product Discount Notes</label>
    <type>TextArea</type>
</CustomField>