force-app/main/default/objects/Strategic_Customer_Program__c/fields/Online_Training__c.field-meta.xml
<CustomField>
    <fullName>Online_Training__c</fullName>
    <label>Online Training</label>
    <type>TextArea</type>
</CustomField>