force-app/main/default/objects/Strategic_Customer_Program__c/fields/Premium_Support__c.field-meta.xml
<CustomField>
    <fullName>Premium_Support__c</fullName>
    <label>Premium Support</label>
    <type>TextArea</type>
</CustomField>