force-app/main/default/objects/Strategic_Customer_Program__c/fields/Product_Price_Notes__c.field-meta.xml
<CustomField>
    <fullName>Product_Price_Notes__c</fullName>
    <label>Product Price Notes</label>
    <type>TextArea</type>
</CustomField>