force-app/main/default/objects/Strategic_Customer_Program__c/fields/Professional_Services_Discount__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services_Discount__c</fullName>
    <label>Professional Services Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>