force-app/main/default/objects/Strategic_Customer_Program__c/fields/Professional_Services_Notes__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services_Notes__c</fullName>
    <label>Professional Services Notes</label>
    <type>TextArea</type>
</CustomField>