force-app/main/default/objects/Strategic_Customer_Program__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled SCP</fullName>
            </value>
            <value>
                <fullName>Candidate for SCP</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Informal / Ad-hoc</fullName>
            </value>
            <value>
                <fullName>Key Account</fullName>
            </value>
            <value>
                <fullName>Premium Support (Gold)</fullName>
            </value>
            <value>
                <fullName>Premium Support (Platinum)</fullName>
            </value>
            <value>
                <fullName>Strategic Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>