force-app/main/default/objects/Strategic_Customer_Program__c/fields/Support_Notes__c.field-meta.xml
<CustomField>
    <fullName>Support_Notes__c</fullName>
    <label>Support Notes</label>
    <type>TextArea</type>
</CustomField>