force-app/main/default/objects/Strategic_Customer_Program__c/fields/Support_Review_On_site_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Support_Review_On_site_Frequency__c</fullName>
    <label>Service Delivery Review (On-site) Freq.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Twice Yearly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Ad Hoc</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>