force-app/main/default/objects/Strategic_Customer_Program__c/fields/Support_Review_Remote__c.field-meta.xml
<CustomField>
    <fullName>Support_Review_Remote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Delivery Review (Remote)</label>
    <type>Checkbox</type>
</CustomField>